[package]
name = "stewardx-cli"
version = "0.1.0"
authors = ["Gokay Okyay <gokayokyay@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
cron = "0.9.0"
isahc = { version = "1.3.1", features = ["json"] }