[package]
name = "stewardx-cli"
version = "0.2.0"
authors = ["Gokay Okyay <gokayokyay@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
cron = "0.9.0"
isahc = { version = "1.3.1", features = ["json"] }
serde_json = "1.0"
log = "0.4.0"
env_logger = "0.8.3"
chrono = "0.4"
home = "0.5.3"
fork = "0.1.18"